feat(todo): returning query & patch method
