# internal/api/controllers/todo.go
@@ -14,9 +14,10 @@ import (
 )
 
 type TodoService interface {
-	GetAll(query *models.TodoQuery, userId int64) ([]models.Todo, error)
+	GetAll(query *models.TodoQuery, userId int64) ([]*models.Todo, error)
 	GetById(id int64, userId int64) (*models.Todo, error)
-	Create(todo *models.POSTTodo, userId int64) (int64, error)
+	Create(todo *models.POSTTodo, userId int64) (*models.Todo, error)
+	UpdateOne(id int64, todo *models.PatchTodo, userID int64) (*models.Todo, error)
 	Delete(id int64, userId int64) error
 }
 
@@ -97,7 +98,7 @@ func (c *TodoController) GetById(w http.ResponseWriter, r *http.Request) error {
 // @Accept json
 // @Produce json
 // @Param todo body models.POSTTodo true "Todo title"
-// @Success 201 {number} int64
+// @Success 201 {object} models.Todo
 // @Failure 400,401,500 {object} api.Error
 // @Router /todo/ [post]
 func (c *TodoController) Create(w http.ResponseWriter, r *http.Request) error {
@@ -115,12 +116,12 @@ func (c *TodoController) Create(w http.ResponseWriter, r *http.Request) error {
 		return api.NewApiError(http.StatusBadRequest, err.Error())
 	}
 
-	id, err := c.service.Create(todo, userId)
+	t, err := c.service.Create(todo, userId)
 	if err != nil {
 		return err
 	}
 
-	api.WriteJSON(w, http.StatusCreated, id)
+	api.WriteJSON(w, http.StatusCreated, t)
 	return nil
 }
 
@@ -151,4 +152,44 @@ func (c *TodoController) Delete(w http.ResponseWriter, r *http.Request) error {
 	}
 
 	return api.WriteJSON(w, http.StatusOK, true)
+}
+
+// @Summary Update todo
+// @Description Update todo
+// @Tags todo
+// @Security jwt
+// @Accept json
+// @Produce json
+// @Param id path int true "Todo ID"
+// @Param todo body models.PatchTodo true "Todo title"
+// @Success 200 {object} models.Todo
+// @Failure 400,401,403,404,500 {object} api.Error
+// @Router /todo/{id} [patch]
+func (c *TodoController) UpdateOne(w http.ResponseWriter, r *http.Request) error {
+	id, err := strconv.ParseInt(mux.Vars(r)["id"], 10, 64)
+	if err != nil {
+		return api.NewApiError(http.StatusBadRequest, "TODO ID should be an integer")
+	}
+
+	userId, err := context.InferAuthContext(r.Context())
+	if err != nil {
+		return err
+	}
+
+	todo := new(models.PatchTodo)
+	if err := json.NewDecoder(r.Body).Decode(todo); err != nil {
+		return api.NewApiError(http.StatusBadRequest, "Invalid JSON")
+	}
+
+	if err := validator.New().Struct(todo); err != nil {
+		return api.NewApiError(http.StatusBadRequest, err.Error())
+	}
+
+	t, err := c.service.UpdateOne(id, todo, userId)
+	if err != nil {
+		return err
+	}
+
+	api.WriteJSON(w, http.StatusOK, t)
+	return nil
 }
