# internal/domain/models/todo.go
@@ -4,11 +4,16 @@ type Todo struct {
 	ID        int64  `json:"id"`
 	Title     string `json:"title"`
 	Completed bool   `json:"completed"`
-	UserId    int64  `json:"user_id"`
+	UserId    int64  `json:"-"`
 }
 
 type POSTTodo struct {
-	Title string `json:"title" validate:"required,min=3,max=32"`
+	Title string `json:"title" validate:"required,min=3,max=255"`
+}
+
+type PatchTodo struct {
+	Title     *string `json:"title" validate:"omitempty,min=3,max=255"`
+	Completed *bool   `json:"completed" validate:"omitempty"`
 }
 
 type TodoQuery struct {
